added step for wifi config (required)

--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,5 @@ Thumbs.db
 
 # Specific files and folders from this project #
 ################################################
-.arduino/temp/*
+arduino/temp/*
 .idea/
