ignoring temp folders

--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,5 @@ Thumbs.db
 # Specific files and folders from this project #
 ################################################
 arduino/temp/*
+temp/*
 .idea/
